--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,25 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="com.dilimanlabs.formbase.authentication.AuthenticatorActivity"
+            android:label="@string/app_name" />
+
         <meta-data
             android:name="AA_DB_NAME"
             android:value="TestActiveAndroid.db" />
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
+
+        <service android:name=".authentication.FormbaseAuthenticatorService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
 
     </application>
 
@@ -36,5 +49,9 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
 
 </manifest>
