--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
         exclude module: "httpclient"
     }
     compile 'com.google.guava:guava:18.0'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 }
