--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    buildToolsVersion '21.1.2'
 
     defaultConfig {
         applicationId "com.dilimanlabs.formbase"
@@ -37,6 +37,7 @@ dependencies {
         exclude module: "httpclient"
     }
     compile 'com.google.guava:guava:18.0'
-    compile 'com.android.support:recyclerview-v7:21.0.0'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.afollestad:material-dialogs:0.7.5.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
