--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+        multiDexEnabled = true
     }
     buildTypes {
         release {
@@ -18,6 +19,12 @@ android {
         }
     }
 
+    dexOptions {
+        incremental true
+        javaMaxHeapSize "2048M"
+    }
+
+
     packagingOptions{
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/LICENSE'
@@ -25,8 +32,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.google.android.gms:play-services-maps:6.5.87'
+    compile "com.android.support:support-v4:22.2.0"
+    compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'org.immutables:gson:1.1.3'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
@@ -40,4 +48,5 @@ dependencies {
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.afollestad:material-dialogs:0.7.5.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
