--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity
             android:name="com.dilimanlabs.formbase.authentication.AuthenticatorActivity"
             android:label="@string/app_name" />
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/app_name"/>
 
         <meta-data
             android:name="AA_DB_NAME"
@@ -28,6 +31,12 @@
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBOBVTZJJUvzNQC7X1SD0NZVNhyl64TT1U"/>
 
         <service android:name=".authentication.FormbaseAuthenticatorService">
             <intent-filter>
@@ -39,6 +48,7 @@
         </service>
 
     </application>
+
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -53,5 +63,11 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
 </manifest>
